<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClutchWin</string>
    <string name="title_section1">Features</string>
    <string name="title_section2">Team vs Team</string>
    <string name="title_section3">Player vs Player</string>
    <string name="action_home">Home</string>
    <string name="action_team">Teams</string>
    <string name="action_player">Players</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_teams_feature">Teams</string>
    <string name="title_activity_players_feature">Players</string>
    <string name="title_teams_feature_team">Team</string>
    <string name="title_teams_feature_opponent">Opponent</string>
    <string name="title_teams_feature_result">Result</string>
    <string name="title_teams_feature_detail">Detail</string>
    <string name="title_players_feature_year">Year</string>
    <string name="title_players_feature_team">Team</string>
    <string name="title_players_feature_batter">Batter</string>
    <string name="title_players_feature_pitcher">Pitcher</string>
    <string name="title_players_feature_result">Result</string>
    <string name="title_players_feature_detail">Detail</string>
    <string name="title_activity_players_years">Seasons</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_players_teams">Teams</string>
    <string name="button_continue">Continue</string>
    <string name="no_internet">No internet available, unable to search</string>
    <string name="loading">Loading&#8230;</string>
    <string name="fatal_error">An error has occurred.</string>
    <string name="no_search_results">No results for this search</string>
    <string name="select_batter_first">select batter first</string>
    <string name="select_pitcher_first">select pitcher first</string>
    <string name="p_select_results_first">select results first</string>
    <string name="select_season_team">select season and then a team first</string>
    <string name="select_team_first">select team first</string>
    <string name="select_opponent_first">select opponent first</string>
    <string name="t_select_result_first">select results first</string>
    <string name="main_discover">Discover how your favorite baseball teams or players perform against their rivals.</string>
    <string name="main_welcome">Welcome!</string>
    <string name="main_title">ClutchWin baseball</string>
    <string name="select_season">select season first</string>
    <string name="title_activity_credits">Information</string>
    <string name="retrosheet_credit"><![CDATA[The information used here was obtained free of charge from and is copyrighted by Retrosheet.
        Interested parties may contact Retrosheet at http://www.retrosheet.org/]]></string>
    <string name="retrosheet_name">Retrosheet</string>
    <string name="credits_disclaimer">There is no guarantee of accuracy for the information supplied. ClutchWin shall not be held responsible for any consequences arising from the use of the material presented here. All information is subject to corrections as additional data is received.</string>
    <string name="credits_clutchwin">© ClutchWin baseball. All rights reserved.</string>
    <string name="credits_clutchwin_url">http://ClutchWin.com/</string>

</resources>
